--- a/app/bedrijfsoptredens.html
+++ b/app/bedrijfsoptredens.html
@@ -2,8 +2,14 @@
 title: Bedrijfsoptredens
 keywords: Bijzonder, Spannend, Krachtig
 summary: Vele bedrijven en instellingen hebben Jelle ingehuurd voor een presentatie, dagvoorzitterschap of een op maat gemaakte optreden tijdens een congres of zakelijke bijeenkomst. Altijd met  groot succes. Jelle zorgt er altijd voor dat zijn optreden naadloos aansluit op het thema van het congres of de bedrijfsbijeenkomst.
+headerimage: /assets/img/bedrijfsoptredens/Bedrijfsoptredens-Jelle-Kuiper-hero.jpg
+formimage: /assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-contact.jpg
 videourl: https://www.youtube.com/embed/bSUdYbj6aJk
 layout: page
+firstTimer: 307
+firstTitle: 'Bedrijfsoptredens'
+secondTimer: 95
+secondTitle: 'Fakespeeches'
 sitemap:
     priority: 1
     changefreq: 'yearly'
@@ -13,7 +19,7 @@ sitemap:
 <section class="block usps">
 	<article class="usp">
 		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
+			<img class="img" src="/assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-fakespeech.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
 			<strong class="subtitle">Fakespeech​​</strong>
@@ -29,7 +35,7 @@ sitemap:
 <section class="block usps">
 	<article class="usp">
 		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
+			<img class="img" src="/assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-presentatie-maxima.JPG" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
 			<strong class="subtitle">Presentatie en Dagvoorzitterschap</strong>
@@ -38,7 +44,7 @@ sitemap:
 	</article>
 	<article class="usp">
 		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
+			<img class="img" src="/assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-quiz.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
 			<strong class="subtitle">Quiz</strong>
@@ -54,8 +60,8 @@ sitemap:
 <!-- block usp -->
 <section class="block usps">
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
+		<picture data-focus-x="0.331" data-focus-y="-0.224"  class=" picture">
+			<img class="img" src="/assets/img/bedrijfsoptredens/SA-logo-zwart-faculty-member.png" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
 			<strong class="subtitle">Meer informatie?</strong>
@@ -72,9 +78,6 @@ sitemap:
 <!-- block reference -->
 <section class="block references">
 	<strong class="subtitle">Jelle doet ook</strong>
-
-	{% include _blocks/_references/bedrijfsoptredens.html %}
-	
+	{% include _blocks/_references/trouwambtenaar.html %}
 	{% include _blocks/_references/theaterproducties.html %}
-
 </section>
