--- a/app/trouwambtenaar.html
+++ b/app/trouwambtenaar.html
@@ -2,8 +2,14 @@
 title: Trouwambtenaar
 keywords: Persoonlijk, Humoristisch, Ontspannen
 summary: Jelle Kuiper is cabaretier en buitengewoon ambtenaar, ook wel BABS hij mag in heel Nederland officieel huwelijken sluiten. Jelle is uitgeroepen tot beste trouwambtenaar van 2014 bij de Dutch Wedding Awards!
+headerimage: /assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-hero.jpg
+formimage: /assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-knuffel-contact.jpg
 layout: page
 videourl: https://www.youtube.com/embed/sQZcXToH1CU
+firstTimer: 627
+firstTitle: 'Huwelijk gesloten'
+secondTimer: 10
+secondTitle: 'Jaar ervaring'
 sitemap:
     priority: 1
     changefreq: 'yearly'
@@ -13,7 +19,7 @@ sitemap:
 <section class="block usps">
 	<article class="usp">
 		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
+			<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-leuktrouwen.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
 			<strong class="subtitle">Leuk trouwen</strong>
@@ -22,7 +28,7 @@ sitemap:
 	</article>
 	<article class="usp">
 		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
+			<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-Persoonlijk.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
 			<strong class="subtitle">Alles behalve doorsnee</strong>
@@ -33,12 +39,11 @@ sitemap:
 
 {% include _blocks/video.html %}
 
-
 <!-- block usp -->
 <section class="block usps">
 	<article class="usp">
 		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
+			<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-leuktrouwen-prijs.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
 			<strong class="subtitle">Uit het juryrapport van de Dutch Wedding Awards:</strong>
@@ -47,7 +52,7 @@ sitemap:
 	</article>
 	<article class="usp">
 		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
+			<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-ceremonieel-huwelijk.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
 			<strong class="subtitle">Een ceremonieel huwelijk</strong>
@@ -63,7 +68,7 @@ sitemap:
 <section class="block usps">
 	<article class="usp">
 		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
+			<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-bloemenmeisje.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
 			<strong class="subtitle">Kosten</strong>
@@ -81,28 +86,8 @@ sitemap:
 {% include _blocks/contactform.html %}
 
 <!-- block reference -->
-<section class="block references">
+<section class="block references"> 
 	<strong class="subtitle">Jelle doet ook</strong>
-	<article class="reference">
-		<div class="introduction">
-			<h3 class="title">Bedrijfsoptredens</h3>
-			<p class="keywords">Bijzonder, spannend, krachtig.</p>
-			<p class="description">Vele bedrijven en instellingen hebben Jelle ingehuurd voor een presentatie, dagvoorzitterschap of een op maat gemaakte optreden tijdens een congres of zakelijke bijeenkomst. Altijd met  groot succes. Jelle zorgt er altijd voor dat zijn optreden naadloos aansluit op het thema van het congres of de bedrijfsbijeenkomst.</p>
-			<a href="/bedrijfsoptredens" class="button">Lees meer</a>
-		</div>
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint reference-image">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
-		</picture>
-	</article>
-	<article class="reference">
-		<div class="introduction">
-			<h3 class="title">Theaterproducties</h3>
-			<p class="keywords">Creatief, aangrijpend, radicaal.</p>
-			<p class="description">Vele bedrijven en instellingen hebben Jelle ingehuurd voor een presentatie, dagvoorzitterschap of een op maat gemaakte optreden tijdens een congres of zakelijke bijeenkomst. Altijd met  groot succes. Jelle zorgt er altijd voor dat zijn optreden naadloos aansluit op het thema van het congres of de bedrijfsbijeenkomst.</p>
-			<a href="/theaterproducties" class="button">Lees meer</a>
-		</div>
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint reference-image">
-			<img class="img" src="/assets/img/scape4.jpg" alt="Jelle Kuiper">
-		</picture>
-	</article>
+	{% include _blocks/_references/bedrijfsoptredens.html %}
+	{% include _blocks/_references/theaterproducties.html %}
 </section>
