--- a/app/bedrijfsoptredens.html
+++ b/app/bedrijfsoptredens.html
@@ -18,7 +18,7 @@ sitemap:
 <!-- block usp -->
 <section class="block usps">
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+		<picture class="focuspoint picture">
 			<img class="img" src="/assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-fakespeech.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
@@ -34,7 +34,7 @@ sitemap:
 <!-- block usp -->
 <section class="block usps">
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+		<picture class="focuspoint picture">
 			<img class="img" src="/assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-presentatie-maxima.JPG" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
@@ -43,7 +43,7 @@ sitemap:
 		</div>
 	</article>
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+		<picture class="focuspoint picture">
 			<img class="img" src="/assets/img/bedrijfsoptredens/Bedrijfsoptreden-Jelle-Kuiper-quiz.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
@@ -60,7 +60,7 @@ sitemap:
 <!-- block usp -->
 <section class="block usps">
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class=" picture">
+		<picture class=" picture">
 			<img class="img" src="/assets/img/bedrijfsoptredens/SA-logo-zwart-faculty-member.png" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
