--- a/app/theaterproducties.html
+++ b/app/theaterproducties.html
@@ -18,7 +18,7 @@ sitemap:
 <!-- block usp -->
 <section class="block usps">
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+		<picture class="focuspoint picture">
 			<img class="img" src="/assets/img/theaterproducties/Theaterproducties-Jelle-Kuiper-introductie.jpeg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
@@ -34,7 +34,7 @@ sitemap:
 <!-- block usp -->
 <section class="block usps">
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+		<picture class="focuspoint picture">
 			<img class="img" src="/assets/img/theaterproducties/buurman_en_buurman/Bedrijfsoptreden-buurmanbuurman-Jelle-Kuiper-3.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
@@ -44,7 +44,7 @@ sitemap:
 		</div>
 	</article>
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+		<picture class="focuspoint picture">
 			<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-ceremonieel-huwelijk.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
@@ -54,7 +54,7 @@ sitemap:
 		</div>
 	</article>
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+		<picture class="focuspoint picture">
 			<img class="img" src="/assets/img/theaterproducties/buurman_en_buurman/Bedrijfsoptreden-buurmanbuurman-Jelle-Kuiper-2.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
@@ -64,7 +64,7 @@ sitemap:
 		</div>
 	</article>
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+		<picture class="focuspoint picture">
 			<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-ceremonieel-huwelijk.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
@@ -74,7 +74,7 @@ sitemap:
 		</div>
 	</article>
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+		<picture class="focuspoint picture">
 			<img class="img" src="/assets/img/theaterproducties/judas/Theaterproducties-judas-Jelle-Kuiper.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
