--- a/app/trouwambtenaar.html
+++ b/app/trouwambtenaar.html
@@ -18,7 +18,7 @@ sitemap:
 <!-- block usp -->
 <section class="block usps">
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+		<picture class="focuspoint picture">
 			<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-leuktrouwen.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
@@ -27,7 +27,7 @@ sitemap:
 		</div>
 	</article>
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+		<picture class="focuspoint picture">
 			<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-Persoonlijk.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
@@ -42,7 +42,7 @@ sitemap:
 <!-- block usp -->
 <section class="block usps">
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+		<picture class="focuspoint picture">
 			<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-leuktrouwen-prijs.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
@@ -51,7 +51,7 @@ sitemap:
 		</div>
 	</article>
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+		<picture class="focuspoint picture">
 			<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-ceremonieel-huwelijk.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
@@ -67,7 +67,7 @@ sitemap:
 <!-- block usp -->
 <section class="block usps">
 	<article class="usp">
-		<picture data-focus-x="0.331" data-focus-y="-0.224"  class="focuspoint picture">
+		<picture class="focuspoint picture">
 			<img class="img" src="/assets/img/trouwambtenaar/Trouwambtenaar-Jelle-Kuiper-bloemenmeisje.jpg" alt="Jelle Kuiper">
 		</picture>
 		<div class="article">
